--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     tools:ignore="MissingConstraints"
     android:background="#FBFBFB">
@@ -20,12 +20,14 @@
             android:layout_gravity="center"
             android:orientation="vertical"
             android:layout_marginBottom="50dp">
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:paddingBottom="50px"
-                android:src="@drawable/logo"/>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                app:civ_border_width="2dp"
+                app:civ_fill_color="#23f22f"
+                app:civ_border_color="@color/white"
+                android:src="@drawable/logo"
+                android:layout_width="100dp"
+                android:layout_height="100dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -48,13 +50,14 @@
                     android:src="@drawable/rectangle" />
 
                 <ImageButton
+                    android:id="@+id/login"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/baseline_arrow_circle_right_24"
+                    android:background="@null"
                     android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="80dp"
-                    android:background="@color/white"/>
+                    android:layout_centerVertical="true"/>
+
             </RelativeLayout>
 
 
@@ -66,15 +69,17 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
                         android:orientation="horizontal">
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
                             android:layout_marginTop="10dp"
                             android:src="@drawable/baseline_person_24"/>
                         <EditText
                             android:id="@+id/email"
-                            android:layout_width="250dp"
+                            android:layout_width="230dp"
                             android:layout_height="wrap_content"
                             android:hint="Email address"/>
                     </LinearLayout>
@@ -84,6 +89,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
                         <ImageView
+                            android:layout_marginLeft="5dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
@@ -91,7 +97,7 @@
                         <EditText
                             android:id="@+id/password"
                             android:hint="Password"
-                            android:layout_width="250dp"
+                            android:layout_width="230dp"
                             android:layout_height="wrap_content"/>
                     </LinearLayout>
 
