--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,4 +44,12 @@
         <item name="android:textSize">17sp</item>
         <item name="android:textColor">#000000</item>
     </style>
+    <style name="donateDoneTitle">
+        <item name="android:textSize">27sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+    <style name="donateDoneContent">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
 </resources>
