--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -6,41 +6,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment1">
 
-    <TextView
-        android:id="@+id/textView1"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Fragment1 / write">
-    </TextView>
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:gravity="center"
+            android:layout_marginTop="50dp"
+            android:text="@string/title"
+            android:textAppearance="@style/title" />
+
+        <androidx.viewpager.widget.ViewPager
+            android:layout_marginVertical="170dp"
+            android:foregroundGravity="center"
+            android:layout_width="350dp"
+            android:layout_height="350dp"
+            android:layout_gravity="center_horizontal"
+            app:layout_constraintTop_toBottomOf="@id/linear"
+            android:id="@+id/pager"
+            />
+
+        <TextView
+            android:id="@+id/bottom_title"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:gravity="center"
+            android:layout_marginTop="550dp"
+            android:text="@string/bottom_title"
+            android:textAppearance="@style/bottom_title" />
+
+    </FrameLayout>
 
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            app:civ_border_width="2dp"
-            app:civ_fill_color="#23f22f"
-            app:civ_border_color="@color/design_default_color_primary_dark"
-            android:src="@drawable/logo"
-            android:layout_width="150dp"
-            android:layout_height="150dp"/>
 
-        <Button
-            android:id="@+id/login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="로그인"
-            tools:ignore="MissingConstraints" />
-
-        <Button
-            android:id="@+id/signup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="회원가입"
-            tools:ignore="MissingConstraints" />
-
-    </LinearLayout>
 </RelativeLayout>
