--- a/app/src/main/res/layout/activity_donateinput.xml
+++ b/app/src/main/res/layout/activity_donateinput.xml
@@ -5,63 +5,182 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/black"
+    <RelativeLayout
+        android:id="@+id/inputrelate"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:src="@drawable/black"
-        android:scaleType="centerCrop"
-        android:clipToOutline="true"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        tools:ignore="MissingConstraints">
 
-    <ImageView
-        android:id="@+id/selectedimage1"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:src="@drawable/img3"
-        android:scaleType="centerCrop"
-        android:clipToOutline="true"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:alpha="0.5"/>
+        <ImageView
+            android:id="@+id/black"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/black"
+            android:scaleType="centerCrop"
+            android:clipToOutline="true"/>
 
-    <TextView
-        android:id="@+id/company_donate"
-        android:layout_width="385dp"
-        android:layout_height="wrap_content"
-        android:text="@string/company"
-        android:textAppearance="@style/company_donate"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="160dp" />
+        <ImageView
+            android:id="@+id/selectedimage1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/img3"
+            android:scaleType="centerCrop"
+            android:clipToOutline="true"
+            android:alpha="0.5"/>
 
-    <TextView
-        android:id="@+id/donationName_donate"
-        android:layout_width="385dp"
-        android:layout_height="wrap_content"
-        android:text="@string/donationName"
-        android:textAppearance="@style/donationName_donate"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="186dp" />
+        <TextView
+            android:id="@+id/company_donate"
+            android:layout_width="385dp"
+            android:layout_height="wrap_content"
+            android:text="@string/company"
+            android:textAppearance="@style/company_donate"
+            android:textStyle="bold"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="160dp" />
 
+        <TextView
+            android:id="@+id/donationName_donate"
+            android:layout_width="385dp"
+            android:layout_height="wrap_content"
+            android:text="@string/donationName"
+            android:textAppearance="@style/donationName_donate"
+            android:textStyle="bold"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="186dp" />
+
+    </RelativeLayout>
     <View
         android:id="@+id/inputbox"
         android:layout_width="match_parent"
-        android:layout_height="570dp"
+        android:layout_height="470dp"
         android:background="@drawable/rounded_box"
-        app:layout_constraintTop_toBottomOf="@id/selectedimage1"
+        app:layout_constraintTop_toBottomOf="@id/donationName_donate"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints"
+        android:layout_marginTop="-60dp"
+        app:layout_constraintTop_toBottomOf="@id/inputrelate">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="기부하기"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/donatement"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/textbox"
+                    android:paddingLeft="5dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="7dp"
+                    android:background="#ffffff"
+                    android:text="기부금" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/textbox"
+                    android:paddingLeft="5dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="7dp"
+                    android:background="#ffffff"
+                    android:text="기부자 이름" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/textbox"
+                    android:paddingLeft="5dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="7dp"
+                    android:background="#ffffff"
+                    android:text="핸드폰 번호" />
+            </RelativeLayout>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:gravity="center"
+                android:text="@string/termAgree" />
+
+            <Button
+                android:id="@+id/inputdonatebtn"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_btn"
+                android:text="기부하기"
+                android:textColor="@color/white" />
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
