feat : 기부상세페이지 버튼 연결 및 프로필 이미지 수정

--- a/app/src/main/res/layout/activity_donationselection.xml
+++ b/app/src/main/res/layout/activity_donationselection.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center">
 
@@ -95,30 +95,70 @@
         android:layout_width="140dp"
         android:layout_height="30dp">
 
-        <ImageView
+<!--        <ImageView-->
+<!--            android:layout_width="30dp"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:background="@drawable/profile1" />-->
+
+<!--        <ImageView-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:src="@drawable/profile2" />-->
+
+<!--        <ImageView-->
+<!--            android:layout_width="80dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:src="@drawable/profile3" />-->
+
+<!--        <ImageView-->
+<!--            android:layout_width="110dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:src="@drawable/profile4" />-->
+
+<!--        <ImageView-->
+<!--            android:layout_width="140dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:src="@drawable/profile5" />-->
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            app:civ_border_width="2dp"
+            app:civ_fill_color="#23f22f"
+            app:civ_border_color="@color/white"
+            android:src="@drawable/profile1"
             android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/profile1" />
+            android:layout_height="140dp"/>
 
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/profile2" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            app:civ_border_width="2dp"
+            app:civ_fill_color="#23f22f"
+            app:civ_border_color="@color/white"
+            android:src="@drawable/profile2"
+            android:layout_width="60dp"
+            android:layout_height="140dp"/>
 
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/profile3" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            app:civ_border_width="3dp"
+            app:civ_fill_color="#23f22f"
+            app:civ_border_color="@color/white"
+            android:src="@drawable/profile4"
+            android:layout_width="90dp"
+            android:layout_height="140dp"/>
 
-        <ImageView
-            android:layout_width="110dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/profile4" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            app:civ_border_width="2dp"
+            app:civ_fill_color="#23f22f"
+            app:civ_border_color="@color/white"
+            android:src="@drawable/profile4"
+            android:layout_width="120dp"
+            android:layout_height="140dp"/>
 
-        <ImageView
-            android:layout_width="140dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/profile5" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            app:civ_border_width="2dp"
+            app:civ_fill_color="#23f22f"
+            app:civ_border_color="@color/white"
+            android:src="@drawable/profile5"
+            android:layout_width="150dp"
+            android:layout_height="140dp"/>
     </RelativeLayout>
 
         <TextView
@@ -134,9 +174,10 @@
     </RelativeLayout>
 
     <Button
+        android:id="@+id/selectdonatebtn"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:background="@color/teal_700"
+        android:background="@drawable/rounded_btn"
         android:textColor="#FFFFFF"
         android:text="@string/donateBtn"
         android:textSize="15sp"
