--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -6,42 +6,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment1">
 
-    <FrameLayout
-        android:id="@+id/container"
+    <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:text="@string/title"
+        android:textAppearance="@style/title" />
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:gravity="center"
-            android:layout_marginTop="50dp"
-            android:text="@string/title"
-            android:textAppearance="@style/title" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewmain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/title"
+        android:layout_centerInParent="true" /> <!-- Adjust this margin value as needed -->
 
-        <androidx.viewpager.widget.ViewPager
-            android:layout_marginVertical="170dp"
-            android:foregroundGravity="center"
-            android:layout_width="350dp"
-            android:layout_height="350dp"
-            android:layout_gravity="center_horizontal"
-            app:layout_constraintTop_toBottomOf="@id/linear"
-            android:id="@+id/pager"
-            />
-
-        <TextView
-            android:id="@+id/bottom_title"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:gravity="center"
-            android:layout_marginTop="550dp"
-            android:text="@string/bottom_title"
-            android:textAppearance="@style/bottom_title" />
-
-    </FrameLayout>
-
-
-
+    <TextView
+        android:id="@+id/bottom_title"
+        android:layout_below="@id/recyclerViewmain"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="@string/bottom_title"
+        android:textAppearance="@style/bottom_title" />
 
 </RelativeLayout>
