--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -5,12 +5,17 @@
         android:enabled="true"
         android:icon="@drawable/baseline_home_24"
         android:title="홈"/>
+    <item
+        android:id="@+id/tab_list"
+        android:enabled="true"
+        android:icon="@drawable/baseline_format_list_bulleted_24"
+        android:title="기부 리스트"/>
 
     <item
-        android:id="@+id/tab_bookmark"
+        android:id="@+id/tab_add"
         android:enabled="true"
-        android:icon="@drawable/baseline_bookmark_border_24"
-        android:title="스크랩"/>
+        android:icon="@drawable/baseline_add_task_24"
+        android:title="기부 등록하기"/>
     <item
         android:id="@+id/tab_mypage"
         android:enabled="true"
