--- a/app/src/main/res/layout/fragment_3.xml
+++ b/app/src/main/res/layout/fragment_3.xml
@@ -20,7 +20,7 @@
             <View
                 android:id="@+id/inputbox"
                 android:layout_width="match_parent"
-                android:layout_height="280dp"
+                android:layout_height="230dp"
                 android:background="@drawable/rounded_box2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -38,11 +38,11 @@
                     app:civ_fill_color="#23f22f"
                     app:civ_border_color="@color/design_default_color_primary_dark"
                     android:src="@drawable/profile3"
-                    android:layout_width="130dp"
-                    android:layout_height="130dp" />
+                    android:layout_width="80dp"
+                    android:layout_height="80dp" />
 
                 <TextView
-                    android:layout_margin="10dp"
+                    android:layout_margin="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/name"
@@ -57,7 +57,8 @@
                     android:id="@+id/stdnum"
                     android:gravity="center"
                     android:textSize="15dp"
-                    android:text="60211704"/>
+                    android:text="60211704"
+                    android:layout_marginBottom="10dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -120,26 +121,22 @@
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:layout_margin="10dp"
+            android:text="기부 참여/개설 현황"/>
+
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-
+            android:layout_height="wrap_content">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_margin="1dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:textSize="25dp"
-                    android:layout_margin="10dp"
-                    android:text="기부 금액"/>
+                android:orientation="vertical">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView"
@@ -154,6 +151,7 @@
                 <!--                    android:src="@drawable/logo"-->
                 <!--                    android:layout_width="100dp"-->
                 <!--                    android:layout_height="100dp"/>-->
+
                 <Button
                     android:id="@+id/signup"
                     android:layout_width="wrap_content"
@@ -167,6 +165,7 @@
                     android:text="로그인"/>
 
             </LinearLayout>
+
         </ScrollView>
 
     </LinearLayout>
