feat : 캐러셀 이미지 버튼 상세와 연결

--- a/app/src/main/res/layout/item_donation_main.xml
+++ b/app/src/main/res/layout/item_donation_main.xml
@@ -9,8 +9,8 @@
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp">
 
-    <ImageView
-        android:id="@+id/imageView"
+    <ImageButton
+        android:id="@+id/imageButton"
         android:layout_width="300dp"
         android:layout_height="400dp"
         android:background="@drawable/rounded_box"
