--- a/app/src/main/res/layout/activity_donateinput.xml
+++ b/app/src/main/res/layout/activity_donateinput.xml
@@ -36,7 +36,7 @@
             android:textAppearance="@style/company_donate"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="160dp" />
+            android:layout_marginTop="155dp" />
 
         <TextView
             android:id="@+id/donationName_donate"
@@ -46,13 +46,13 @@
             android:textAppearance="@style/donationName_donate"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="186dp" />
+            android:layout_marginTop="180dp" />
 
     </RelativeLayout>
     <View
         android:id="@+id/inputbox"
         android:layout_width="match_parent"
-        android:layout_height="470dp"
+        android:layout_height="510dp"
         android:background="@drawable/rounded_box"
         app:layout_constraintTop_toBottomOf="@id/donationName_donate"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,14 +62,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="-100dp"
+        app:layout_constraintTop_toBottomOf="@id/inputrelate"
         tools:ignore="MissingConstraints"
-        android:layout_marginTop="-60dp"
-        app:layout_constraintTop_toBottomOf="@id/inputrelate">
+        tools:layout_editor_absoluteX="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10dp"
+            android:layout_margin="30dp"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="20dp"
@@ -121,21 +122,29 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp">
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="15dp"
-                    android:background="@drawable/textbox"
-                    android:paddingLeft="5dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
+                <Button
+                    android:id="@+id/button1"
+                    android:layout_width="99dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="7dp"
-                    android:background="#ffffff"
-                    android:text="기부자 이름" />
+                    android:text="+ 1,000원"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"/>
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="99dp"
+                    android:layout_height="wrap_content"
+                    android:text="+ 5,000원"
+                    android:layout_toRightOf="@id/button1"
+                    android:layout_centerVertical="true"/>
+
+                <Button
+                    android:id="@+id/button3"
+                    android:layout_width="99dp"
+                    android:layout_height="wrap_content"
+                    android:text="+ 10,000원"
+                    android:layout_toRightOf="@id/button2"
+                    android:layout_centerVertical="true"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -143,7 +152,8 @@
                 android:layout_height="60dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="-10dp">
 
                 <EditText
                     android:layout_width="match_parent"
@@ -158,8 +168,17 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="7dp"
                     android:background="#ffffff"
-                    android:text="핸드폰 번호" />
+                    android:text="닉네임" />
             </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="-10dp"
+                android:background="#ffffff"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="실제 기부금이 전달될 때 표기될 기부자명입니다." />
 
             <CheckBox
                 android:layout_width="wrap_content"
@@ -179,8 +198,6 @@
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
