--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,25 +8,25 @@
     <RelativeLayout
         android:id="@+id/inputrelate"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="180dp"
         tools:ignore="MissingConstraints">
 
         <ImageView
-            android:id="@+id/black"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/black"
+            android:src="@color/black"
             android:scaleType="centerCrop"
             android:clipToOutline="true"/>
 
-        <ImageView
+        <ImageButton
             android:id="@+id/selectedimage1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/img3"
-            android:scaleType="centerCrop"
+            android:src="@drawable/insert_btn"
+            android:scaleType="fitXY"
             android:clipToOutline="true"
-            android:alpha="0.5"/>
+            android:padding="0dp"
+            android:clickable="true" />
 
     </RelativeLayout>
     <View
@@ -44,6 +44,7 @@
         android:layout_height="500dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="-20dp"
         tools:ignore="MissingConstraints">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -158,8 +159,8 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp">
 
-                <Spinner
-                    android:id="@+id/datePickerSpinner"
+                <EditText
+                    android:id="@+id/goal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="15dp"
@@ -172,7 +173,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="7dp"
                     android:background="#ffffff"
-                    android:text="목표 날짜" />
+                    android:text="목표 금액" />
             </RelativeLayout>
 
 
