UI : 기부 등록 제목 수정

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -99,7 +99,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="기부하기"
+                android:text="기부 등록하기"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
